# hatch

./: AGENTS.md  README.md
lightweight-labeling-tool/: .gitignore  Makefile  NOTES.md  README.md  _summary.md  pyproject.toml  test_marimo_compatibility.py
lightweight-labeling-tool/.claude/skills/marimo/: SKILL.md
lightweight-labeling-tool/js/: package.json
lightweight-labeling-tool/js/src/: image_widget.jsx
lightweight-labeling-tool/llabel/: __init__.py  base.py  image.py  text.py
lightweight-labeling-tool/llabel/static/: image-widget.css  image-widget.js  text-widget.css
lightweight-labeling-tool/notebooks/: 01_text_labeling_demo.ipynb  01_text_labeling_demo.py  02_image_labeling_demo.ipynb  02_image_labeling_demo.py  03_sam_integration_demo.py
lightweight-labeling-tool/notebooks/__marimo__/session/: 01_text_labeling_demo.py.json  03_sam_integration_demo.py.json
lightweight-labeling-tool/src/llabel/: base.py  image.py  pdf.py  text.py  utils.py  video.py
lightweight-labeling-tool/src/llabel/static/: image-widget.css  image-widget.js  text-widget.css  text-widget.js
lightweight-labeling-tool/tests/: test_marimo_compatibility.py
meta-agent-eval-system/: .gitignore  README.md  app.py  pyproject.toml
meta-agent-eval-system/agent/: __init__.py  chatbot.py  mock_agent.py  mock_data.py  tools.py
meta-agent-eval-system/docs/: NOTES.md  TAXONOMY_VISUALIZATION.md  _summary.md
meta-agent-eval-system/eval/: __init__.py  judge.py  metrics.py  mock_judge.py  pipeline.py
meta-agent-eval-system/scripts/: data_transformation.py  merge_fixed_rows.py
meta-agent-eval-system/taxonomy/: __init__.py  taxonomy.py  taxonomy_generator.py
meta-agent-eval-system/ui/: __init__.py  app_auxiliary.py  app_batch_evals.py  app_live_evals.py  app_taxonomy.py  app_utils.py
