# Adapted from koaning/molabel
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llabel"
version = "0.1.0"
description = "Lightweight labeling widgets for interactive notebooks (Jupyter, Marimo)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
]

[project.optional-dependencies]
# Media handling (images, videos, PDFs)
media = ["Pillow>=9.0.0", "numpy>=1.20.0", "opencv-python>=4.5.0", "pypdf>=3.0.0"]
# SAM (Segment Anything Model) integration - heavy ML dependencies
sam = ["segment-anything", "torch>=1.7.0", "torchvision>=0.8.0", "scikit-learn", "matplotlib"]
# Development and testing
dev = ["pytest>=7.0", "black>=22.0", "ruff>=0.0.270", "marimo", "jupyter", "notebook", "datasets"]
# Everything
all = ["Pillow>=9.0.0", "numpy>=1.20.0", "opencv-python>=4.5.0", "pypdf>=3.0.0", "segment-anything", "torch>=1.7.0", "torchvision>=0.8.0", "scikit-learn", "matplotlib", "datasets"]

[tool.hatch.build.targets.wheel]
packages = ["src/llabel"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/llabel/**/*.py",
    "src/llabel/static/**/*",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.marimo.runtime]
output_max_bytes = 10_000_000_000